# hyper_sh

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
hyper_sh/: __init__.py
hyper_sh/requests_aws4auth/: __init__.py  aws4auth.py  aws4signingkey.py  exceptions.py  service_parameters.py
hypercompose/: api.py  cmd.py
hypercompose/requests_aws4auth/: __init__.py  aws4auth.py  aws4signingkey.py  six.py
tests/: docker-compose.yml  test_integration.py
