[metadata]
name = hyper_sh
author = Pierre Tardy
author-email = tardyp@gmail.com
summary = docker-py on hyper infra
description-file = README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    docker
    hyper

[files]
packages =
    hyper_sh

[bdist_wheel]
universal=1

[yapf]
based_on_style = pep8
column_limit = 110
[flake8]
max-line-length = 110
